Library/AXL(Library)/Visual Basic/AXM.bas


' 00=[AXIS_NO             ]: axis (start from 0axis)
' 01=[PULSE_OUT_METHOD    ]: Pulse out method TwocwccwHigh = 6
' 02=[ENC_INPUT_METHOD    ]: disable = 0   1 multiplication = 1  2 multiplication = 2  4 multiplication = 3, for replacing the direction of splicing (-).1 multiplication = 11  2 multiplication = 12  4 multiplication = 13
' 03=[INPOSITION          ], 04=[ALARM     ], 05,06 =[END_LIMIT   ]  : 0 = A contact 1= B contact 2 = not use. 3 = keep current mode
' 07=[MIN_VELOCITY        ]: START VELOCITY
' 08=[MAX_VELOCITY        ]: command velocity which driver can accept. Generally normal servo is 700k
' Ex> screw : 20mm pitch drive: 10000 pulse motor: 400w
' 09=[HOME_SIGNAL         ]: 4 - Home in0 , 0 :PosEndLimit , 1 : NegEndLimit ' refer _HOME_SIGNAL.
' 10=[HOME_LEVEL          ]: : 0 = A contact 1= B contact 2 = not use. 3 = keep current mode
' 11=[HOME_DIR            ]: HOME DIRECTION 1:+direction, 0:-direction
' 12=[ZPHASE_LEVEL        ]: : 0 = A contact 1= B contact 2 = not use. 3 = keep current mode
' 13=[ZPHASE_USE          ]: use of Z phase. 0: not use , 1: - direction, 2: +direction
' 14=[STOP_SIGNAL_MODE    ]: ESTOP, mode in use of SSTOP  0:slowdown stop, 1:emergency stop
' 15=[STOP_SIGNAL_LEVEL   ]: ESTOP, SSTOP use level. : 0 = A contact 1= B contact 2 = not use. 3 = keep current mode
' 16=[HOME_FIRST_VELOCITY ]: 1st move velocity
' 17=[HOME_SECOND_VELOCITY]: velocity after detecting
' 18=[HOME_THIRD_VELOCITY ]: the last velocity
' 19=[HOME_LAST_VELOCITY  ]: velocity for index detecting and detail detecting
' 20=[HOME_FIRST_ACCEL    ]: 1st acceleration, 21=[HOME_SECOND_ACCEL   ] : 2nd acceleration
' 22=[HOME_END_CLEAR_TIME ]: queue time to set origin detecting Enc value,  23=[HOME_END_OFFSET] : move as much as offset after detecting of origin.
' 24=[NEG_SOFT_LIMIT      ]: - not use if set same as SoftWare Limit , 25=[POS_SOFT_LIMIT ]: - not use if set same as SoftWare Limit.
' 26=[MOVE_PULSE          ]: amount of pulse per driver revolution               , 27=[MOVE_UNIT  ]: travel distance per driver revolution :screw Pitch
' 28=[INIT_POSITION       ]: initial position when use agent , user can use optionally
' 29=[INIT_VELOCITY       ]: initial velocity when use agent, user can use optionally
' 30=[INIT_ACCEL          ]: initial acceleration when use agent, user can use optionally
' 31=[INIT_DECEL          ]: initial deceleration when use agent, user can use optionally
' 32=[INIT_ABSRELMODE     ]: absolute(0)/relative(1) set position
' 33=[INIT_PROFILEMODE    ]: set profile mode in (0 - 4)
'                            '0': symmetry Trapezode, '1': asymmetric Trapezode, '2': symmetry Quasi-S Curve, '3':symmetry S Curve, '4':asymmetric S Curve
' 34=[SVON_LEVEL          ]: 0 = contact B, 1 = contact A
' 35=[ALARM_RESET_LEVEL   ]: 0 = contact B, 1 = contact A
' 36=[ENCODER_TYPE        ]: 0 = TYPE_INCREMENTAL, 1 = TYPE_ABSOLUTE, 2 = TYPE_NONE
' 37=[SOFT_LIMIT_SEL      ]: 0 = COMMAND, 1 = ACTUAL
' 38=[SOFT_LIMIT_STOP_MODE]: 0 = EMERGENCY_STOP, 1 = SLOWDOWN_STOP
' 39=[SOFT_LIMIT_ENABLE   ]: 0 = DISABLE, 1 = ENABLE

' load .mot file which is saved as AxmMotSaveParaAll. Optional modification is available by user.
Public Declare Function AxmMotLoadParaAll Lib "AXL.dll" (ByVal szFilePath As String) As Long
' Save all parameter for all current axis by axis. Save as .mot file. Load file by using  AxmMotLoadParaAll.
Public Declare Function AxmMotSaveParaAll Lib "AXL.dll" (ByVal szFilePath As String) As Long


' In parameter 28 - 31, user sets by using this API in the program.
Public Declare Function AxmMotSetParaLoad Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dInitPos As Double, ByVal dInitVel As Double, ByVal dInitAccel As Double, ByVal dInitDecel As Double) As Long
' In parameter 28 - 31, user verifys by using this API in the program.
Public Declare Function AxmMotGetParaLoad Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpInitPos As Double, ByRef dpInitVel As Double, ByRef dpInitAccel As Double, ByRef dpInitDecel As Double) As Long


' Set the pulse output method of specific axis.
'uMethod  0 :OneHighLowHigh, 1 :OneHighHighLow, 2 :OneLowLowHigh, 3 :OneLowHighLow, 4 :TwoCcwCwHigh
'         5 :TwoCcwCwLow,    6 :TwoCwCcwHigh,   7 :TwoCwCcwLow,   8 :TwoPhase,      9 :TwoPhaseReverse
'    OneHighLowHigh          = 0x0,   // 1 pulse method, PULSE(Active High), forward direction(DIR=Low)  / reverse direction(DIR=High)
'    OneHighHighLow          = 0x1,   // 1 pulse method, PULSE(Active High), forward direction (DIR=High) / reverse direction (DIR=Low)
'    OneLowLowHigh           = 0x2,   // 1 pulse method, PULSE(Active Low), forward direction (DIR=Low)  / reverse direction (DIR=High)
'    OneLowHighLow           = 0x3,   // 1 pulse method, PULSE(Active Low), forward direction (DIR=High) / reverse direction (DIR=Low)
'    TwoCcwCwHigh            = 0x4,   // 2 pulse method, PULSE(CCW: reverse direction),  DIR(CW: forward direction),  Active High
'    TwoCcwCwLow             = 0x5,   // 2 pulse method, PULSE(CCW: reverse direction),  DIR(CW: forward direction),  Active Low
'    TwoCwCcwHigh            = 0x6,   // 2 pulse method, PULSE(CW: forward direction),   DIR(CCW: reverse direction), Active High
'    TwoCwCcwLow             = 0x7,   // 2 pulse method, PULSE(CW: forward direction),   DIR(CCW: reverse direction), Active Low
'    TwoPhase                = 0x8,   // 2 phase (90' phase difference),  PULSE lead DIR(CW: forward direction), PULSE lag DIR(CCW: reverse direction)
'    TwoPhaseReverse         = 0x9    // 2 phase(90' phase difference),  PULSE lead DIR(CCW: Forward diredtion), PULSE lag DIR(CW: Reverse direction)

Public Declare Function AxmMotSetPulseOutMethod Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uMethod As Long) As Long
' Return the setting of pulse output method of specific axis.
Public Declare Function AxmMotGetPulseOutMethod Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upMethod As Long) As Long


' Set the Encoder input method including the setting of increase direction of actual count of specific axis.
'    ObverseUpDownMode       = 0x0,   // Forward direction Up/Down
'    ObverseSqr1Mode         = 0x1,   // Forward direction 1 multiplication
'    ObverseSqr2Mode         = 0x2,   // Forward direction 2 multiplication
'    ObverseSqr4Mode         = 0x3,   // Forward direction 4 multiplication
'    ReverseUpDownMode       = 0x4,   // Reverse direction Up/Down
'    ReverseSqr1Mode         = 0x5,   // Reverse direction 1 multiplication
'    ReverseSqr2Mode         = 0x6,   // Reverse direction 2 multiplication
'    ReverseSqr4Mode         = 0x7    // Reverse direction 4 multiplication

Public Declare Function AxmMotSetEncInputMethod Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uMethod As Long) As Long
' Return the Encoder input method including the setting of increase direction of actual count of specific axis.
Public Declare Function AxmMotGetEncInputMethod Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upMethod As Long) As Long



' If you want to set specified velocity unit in RPM(Revolution Per Minute),
' ex>    calculate rpm :
' 4500 rpm ?
' When unit/ pulse = 1 : 1, then it becomes pulse per sec, and
' if you want to set at 4500 rpm , then  4500 / 60 sec : 75 revolution / 1sec
' The number of pulse per 1 revolution of motor shall be known. This can be know by detecting of Z phase in Encoder.
' If 1 revolution:1800 pulse,  75 x 1800 = 135000 pulses are required.
' Operate by input Unit = 1, Pulse = 1800 into AxmMotSetMoveUnitPerPulse.
' Caution : If it is controlled with rpm, velocity and acceleration will be changed to rpm unit as well.

' Set the travel distance of specific axis per pulse.
Public Declare Function AxmMotSetMoveUnitPerPulse Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dUnit As Double, ByVal lPulse As Long) As Long
' Return the travel distance of specific axis per pulse.
Public Declare Function AxmMotGetMoveUnitPerPulse Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpUnit As Double, ByRef lpPulse As Long) As Long


' Set deceleration starting point detecting method to specific axis.
' AutoDetect 0x0 : automatic acceleration/deceleration.
' RestPulse  0x1 : manual acceleration/deceleration."
Public Declare Function AxmMotSetDecelMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uMethod As Long) As Long
' Return the deceleration starting point detecting method of specific axis.
Public Declare Function AxmMotGetDecelMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upMethod As Long) As Long


' Set remain pulse to the specific axis in manual deceleration mode.
Public Declare Function AxmMotSetRemainPulse Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uData As Long) As Long
' Return remain pulse of the specific axis in manual deceleration mode.
Public Declare Function AxmMotGetRemainPulse Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef updata As Long) As Long


' Set maximum velocity to the specific axis in uniform velocity movement API.
' Note : Input maximum speed value is not PPS but UNIT.
' ex) Maximum output frequency(PCI-N804/404 : 10 MPPS)
' ex) Maximum output Unit/Sec(PCI-N804/404 : 10MPPS * Unit/Pulse)
Public Declare Function AxmMotSetMaxVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVel As Double) As Long
' Return maximum velocity of the specific axis in uniform velocity movement API
Public Declare Function AxmMotGetMaxVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpVel As Double) As Long


' Set travel distance calculation mode of specific axis.
'uAbsRelMode : POS_ABS_MODE '0' - absolute coordinate system
'              POS_REL_MODE '1' - relative coordinate system
Public Declare Function AxmMotSetAbsRelMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uAbsRelMode As Long) As Long
' Return travel distance calculation mode of specific axis.
Public Declare Function AxmMotGetAbsRelMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upAbsRelMode As Long) As Long


'Set move velocity profile mode of specific axis.
'ProfileMode : SYM_TRAPEZOIDE_MODE  '0' - symmetry Trapezode
'              ASYM_TRAPEZOIDE_MODE '1' - asymmetric Trapezode
'              QUASI_S_CURVE_MODE   '2' - symmetry Quasi-S Curve
'              SYM_S_CURVE_MODE     '3' - symmetry S Curve
'              ASYM_S_CURVE_MODE    '4' - asymmetric S Curve
'              SYM_TRAP_M3_SW_MODE    '5' - Symmetry Trapezode : MLIII internal S/W Profile
'              ASYM_TRAP_M3_SW_MODE   '6' - Asymmetry Trapezode : MLIII internal S/W Profile
'              SYM_S_M3_SW_MODE       '7' - Symmetry S Curve : MLIII internal S/W Profile
'              ASYM_S_M3_SW_MODE      '8' - Asymmetric S Curve : MLIII internal S/W Profile
Public Declare Function AxmMotSetProfileMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uProfileMode As Long) As Long
' Return move velocity profile mode of specific axis.
Public Declare Function AxmMotGetProfileMode Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upProfileMode As Long) As Long


'Set acceleration unit of specific axis.
'AccelUnit : UNIT_SEC2  '0' ? use unit/sec2 for the unit of acceleration/deceleration
'            SEC        '1' - use sec for the unit of acceleration/deceleration
Public Declare Function AxmMotSetAccelUnit Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal uAccelUnit As Long) As Long
' Return acceleration unit of specific axis.
Public Declare Function AxmMotGetAccelUnit Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef upAccelUnit As Long) As Long


' Set initial velocity to the specific axis.
Public Declare Function AxmMotSetMinVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dMinVel As Double) As Long
' Return initial velocity of the specific axis.
Public Declare Function AxmMotGetMinVel Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dpMinVel As Double) As Long

